[gd_scene load_steps=2 format=3 uid="uid://deopl3p3blrra"]

[ext_resource type="Script" uid="uid://gpi80m4xwr8n" path="res://Core/UI/VectorSettingWidget.gd" id="1_a0wdn"]

[node name="VectorSettingWidget" type="HBoxContainer"]
script = ExtResource("1_a0wdn")

[node name="SpinBox0" type="SpinBox" parent="."]
layout_mode = 2
size_flags_horizontal = 3
min_value = -100.0
step = 0.01

[node name="SpinBox1" type="SpinBox" parent="."]
layout_mode = 2
size_flags_horizontal = 3
min_value = -100.0
step = 0.01

[node name="SpinBox2" type="SpinBox" parent="."]
layout_mode = 2
size_flags_horizontal = 3
min_value = -100.0
step = 0.01
